# tiledland

./: .gitattributes  .gitignore  BOARD.md  LICENCE.md  README.md  example-scene.py  example-web.py  exemple-01-draw.py  exemple-02-cells.py  exemple-02-tiles.py  exemple-03-joint.py  exemple-04-hexamap.py  exemple-04-map.py  exemple-1.1-draw.py  exemple-1.1-drawing.py  exemple-1.2-tiles.py  exemple-1.3-joint.py  exemple-11-drawing.py  exemple-2.1-map.py  exemple-2.2-regularMap.py  exemple-21-tiles.py  exemple-31-map.py  exemple-33-graph2map.py  exemple-cells.py  exemple-draw.py  mkdocs.yml  pyproject.toml
demo/: 01-grid-scene.py  02-hexa-world.py  03-loading-gridmap.py  map-room3006.yaml
docs/: faq.md  geometry.md  ihm-gui.md  ihm-web.md  index.md  main-entity.md  pypip-index.md  scene.md  web.md
example/: 01-grid-scene.py  01-scene.py  02-hexa-world.py
launch/: conf-pnd-large-01.json  conf-pnd-medium-01.json  conf-pnd-medium-02.json  conf-pnd-small-01.json  pickndel.py
src/: play.py
tests/: test_000_dep_shapely.py  test_001_geom_a.py  test_001_shaped.py  test_002_agent.py  test_003_tile.py  test_011_regularScene.py  test_012_polyScene.py  test_013_SceneBodies.py  test_01_geom_01_point.py  test_01_geom_02_line.py  test_01_geom_03_convex.py  test_01_geom_03_mesh.py  test_01_geom_03_pointcloud.py  test_01_geom_04_convex.py  test_01_geom_04_grid.py  test_01_geom_04_shape.py  test_01_geom_05_grid.py  test_01_geom_06_grid_clustering.py  test_01_geom_a.py  test_01_geom_shape.py  test_01_shape.py  test_01_shaped.py  test_02_agent.py  test_02_body.py  test_02_tile.py  test_02_tiledland_01_entity.py  test_02_tiledland_01_load.py  test_02_tiledland_02_agent.py  test_02_tiledland_03_tile.py  test_02_tiledland_04_map.py  test_02_tiledland_04_scene.py  test_02_tiledland_06_grid2scene.py  test_02_tiledland_06_grid2tllMap.py  test_03_artist_01_load.py  test_03_artist_02_supSvg.py  test_03_artist_03_supPng.py  test_03_artist_04_panel.py  (+34 more)
(+164 files in other folders)
