[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiledLand"
version = "0.0.1"
authors = [
  { name="Guillaume Lozenguez", email="guillaume.lozenguez@imt-nord-europe.fr" },
]
description = "poligon-based Tile, linked to build a Map of an environment"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://mobi-syst.github.io"
