[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "tiledland"
version = "0.1.0"
authors = [
  { name="Guillaume Lozenguez", email="guillaume.lozenguez@imt-nord-europe.fr" },
]
description = "Polygon-based interconnected tiles to model an environment and mobile objects inside."
dependencies = [ "hacka", "pycairo", "pyyaml" ]
readme = "docs/pypip-index.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://imt-mobisyst.github.io"
